--- a/src/Keycloak.Net/Keycloak.Net.csproj
+++ b/src/Keycloak.Net/Keycloak.Net.csproj
@@ -1,37 +1,45 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>net452;netstandard1.4;netstandard2.0;netstandard2.1</TargetFrameworks>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <Authors>Luk Vermeulen</Authors>
-    <Copyright>Copyright 2019 by Luk Vermeulen. All rights reserved.</Copyright>
-    <PackageLicenseUrl>https://github.com/lvermeulen/Keycloak.Net/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/lvermeulen/Keycloak.Net</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/lvermeulen/Keycloak.Net</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageTags>keycloak</PackageTags>
-    <PackageIconUrl>https://i.imgur.com/eEjfRLz.jpg?2</PackageIconUrl>
-    <Description>C# client for Keycloak</Description>
-    <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\..\Keycloak.Net.snk</AssemblyOriginatorKeyFile>
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <IncludeSymbols>true</IncludeSymbols>
-    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>net6.0</TargetFrameworks>
+		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+		<Authors>Ramazan Yavuz (Original: Luk Vermeulen)</Authors>
+		<Copyright>Copyright 2019 by Luk Vermeulen. All rights reserved.</Copyright>
+		<PackageLicenseUrl>https://github.com/lvermeulen/Keycloak.Net/blob/master/LICENSE</PackageLicenseUrl>
+		<PackageProjectUrl>https://github.com/yavuzitconsulting/Keycloak.Net</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/yavuzitconsulting/Keycloak.Net</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageTags>keycloak</PackageTags>
+		<PackageIconUrl>https://i.imgur.com/eEjfRLz.jpg?2</PackageIconUrl>
+		<Description>C# client for Keycloak</Description>
+		<SignAssembly>true</SignAssembly>
+		<AssemblyOriginatorKeyFile>..\..\Keycloak.Net.snk</AssemblyOriginatorKeyFile>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<PackageId>YITC.$(AssemblyName)</PackageId>
+		<PackageIcon>android-chrome-512x512.png</PackageIcon>
+		<AssemblyVersion>1.1</AssemblyVersion>
+		<PackageVersion>1.1</PackageVersion>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Flurl.Http.Signed" Version="2.4.2" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="System.Net.Http" Version="4.3.4" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Flurl.Http.Signed" Version="2.4.2" />
+		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+		<PackageReference Include="System.Net.Http" Version="4.3.4" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Include="..\..\README.md" Pack="true" PackagePath="\" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Include="..\..\..\..\YavuzITConsulting\OLD\YITC_HOME\html5Manual\yavuzitconsulting\android-chrome-512x512.png">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+		<None Include="..\..\README.md" Pack="true" PackagePath="\" />
+	</ItemGroup>
 
 </Project>
